2001-06-23  Bart Schaefer  <schaefer@zsh.org>

	* 15050, 15054: Src/exec.c: Change exit status of external
	commands that could not be executed, to comply with POSIX.

2001-06-22  Andrej Borsenkow  <bor@zsh.org>

	* 15021: Src/prompt.c, Doc/Zsh/prompt.yo: revert to old %l
	semantic; add new %y character instead as suggested by Wayne

	* 15038: Test/A01grammar.ztst: test case for 15023.
	(unposted) fix a couple of typos in test decriptions

2001-06-21  Sven Wischnowsky  <wischnow@zsh.org>

	* 15029: Completion/Unix/Command/_man: improve pattern matching
	to make match specs work for manual page completion

2001-06-21  Bart Schaefer  <schaefer@zsh.org>

	* 15023, 15027: Src/parse.c: Accept newlines before the "in"
	keyword in "for" and "select", per POSIX.

	* 15020: Completion/Zsh/Command/_cd, Completion/Zsh/Context/_autocd,
	Completion/Zsh/Type/_command_names: When AUTO_CD is set, complete
	directory names (including along cdpath) as well as commands when
	in command position.

	* 15018: Completion/compinit: Fix exit status of compdef.

	* 15002: Completion/Base/Widget/_complete_debug,
	Completion/Base/Widget/_complete_help: Use `trap' to restore state
	properly in case of keyboard interrupt.

2001-06-20  Bart Schaefer  <schaefer@zsh.org>

	* 14880: Completion/Base/Core/_main_complete: Fix insert-tab style
	when value is `pending'.  (Belated commit, out of number order.)

2001-06-20  Peter Stephenson  <pws@csr.com>

	* 14988 with mod suggested in 14989: Src/exec.c: avoid names of
	saved special parameters being trashed.

2001-06-19  Bart Schaefer  <schaefer@zsh.org>

	* 14976: aczsh.m4: Add socklen_t to possible SOCKLEN_T types.

2001-06-19  Andrej Borsenkow  <bor@zsh.org>

	* 14973: acconfig.h, aczsh.m4, zshconfig.ac, Src/Modules/zftp.c:
	fix for reported problems on AIX 4.x. Still no feedback if it
	finally works (or even compiles)

2001-06-18  Bart Schaefer  <schaefer@zsh.org>

	* 14965: Src/Zle/computil.c: Silence compiler warnings.
